fix(tests): improve file operations testing